version/0.22/_sources/api/solver/_autosummary/settings/charge.rst.txt
:orphan:

.. _charge:

charge
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.charge.charge
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

